--- a/main.html
+++ b/main.html
@@ -8,6 +8,33 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header>HIT 3</header>
+	<nav>
+		<ul>
+			<li id=nav-actor><link href="#">Actors</link></li>
+			<li id=nav-quote><link href="#">Quotes</link></li>
+		</ul>
+	</nav>
+	<main>
+		<p>In this gripping thriller, SP Arjun Sarkaar is dispatched to Jammu and Kashmir to investigate a series of brutal murders. As he delves deeper, he uncovers a dark web of serial killings linked to a clandestine website catering to psychopaths. Arjun embarks on a covert operation, aiming to dismantle this network from within.</p>
+	<section id="actor">
+		<ul>
+			<li>Nani as SP Arjun Sarkaar</li>
+                <li>Srinidhi Shetty as ASP Mridula IPS</li>
+                <li>Surya Srinivas as ASP Ravi IPS</li>
+                <li>Adil Pala as SI Zubair Ahmed Khan</li>
+                <li>Rao Ramesh as ADGP Nageswara Rao IPS</li>
+		</ul>
+	</section>
+	<section id="quote">
+		"You don't fight monsters by becoming one. You outthink them."
+	</section>
+	</main>
+	<aside>
+		<p>IMDb Rating: 7.4/10</p>
+        <p>Release Date: May 1, 2025</p>
+	</aside>
+	<footer>Produced by: Prashanti Tipirneni and Nani</footer>
     <script type="text/javascript" src="./script.js">
 </script>
 
