--- a/main.html
+++ b/main.html
@@ -11,12 +11,12 @@
 	<header>HIT 3</header>
 	<nav>
 		<ul>
-			<li id=nav-actor><link href="#">Actors</link></li>
-			<li id=nav-quote><link href="#">Quotes</link></li>
+			<li id=nav-actor><a href="#actor">Actors</a></li>
+			<li id=nav-quote><a href="#quote">Quotes</a></li>
 		</ul>
 	</nav>
 	<main>
-		<p>In this gripping thriller, SP Arjun Sarkaar is dispatched to Jammu and Kashmir to investigate a series of brutal murders. As he delves deeper, he uncovers a dark web of serial killings linked to a clandestine website catering to psychopaths. Arjun embarks on a covert operation, aiming to dismantle this network from within.</p>
+		<summary>In this gripping thriller, SP Arjun Sarkaar is dispatched to Jammu and Kashmir to investigate a series of brutal murders. As he delves deeper, he uncovers a dark web of serial killings linked to a clandestine website catering to psychopaths. Arjun embarks on a covert operation, aiming to dismantle this network from within.</summary>
 	<section id="actor">
 		<ul>
 			<li>Nani as SP Arjun Sarkaar</li>
