--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
 	<header>HIT 3</header>
 	<nav>
 		<ul>
-			<li id=nav-actor><a href="#actor">Actors</a></li>
-			<li id=nav-quote><a href="#quote">Quotes</a></li>
+			<a href="#actor">Actors</a>
+			<a href="#quote">Quotes</a>
 		</ul>
 	</nav>
 	<main>
