--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
 	<header>HIT 3</header>
 	<nav>
 		<ul>
-			<a href="#actor">Actors</a>
-			<a href="#quote">Quotes</a>
+			<a href="#actor" id="nav-actor">Actors</a>
+			<a href="#quote" id="nav-quote">Quotes</a>
 		</ul>
 	</nav>
 	<main>
